--- a/src/br/com/infox/telas/TelaPrincipal.form
+++ b/src/br/com/infox/telas/TelaPrincipal.form
@@ -152,7 +152,7 @@
               <EmptySpace max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
                   <Group type="102" attributes="0">
-                      <Component id="desktop" min="-2" pref="508" max="-2" attributes="0"/>
+                      <Component id="desktop" min="-2" max="-2" attributes="0"/>
                       <EmptySpace max="-2" attributes="0"/>
                   </Group>
                   <Group type="102" alignment="0" attributes="0">
@@ -183,9 +183,6 @@
           <Dimension value="[640, 480]"/>
         </Property>
         <Property name="minimumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
-          <Dimension value="[640, 480]"/>
-        </Property>
-        <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
           <Dimension value="[640, 480]"/>
         </Property>
       </Properties>
